2000-08-12  Dan Winship  <danw@helixcode.com>

	* mail-callbacks.c (delete_msg): Toggling a flag is an
	"instantaneous" operation, so if we're only doing one, just do it
	and return, rather than queueing it for the other thread. This
	makes the "Delete" key work correctly (move to the next message)
	again.

	* mail-identify.c: Remove workaround for gnome-vfs 0.2 bug.

	* mail-format.c (lookup_handler): Remove workaround for function
	introduced between gnome-vfs 0.2 and 0.3, since we depend on 0.3
	now.

2000-08-12  Michael Meeks  <michael@helixcode.com>

	* main.c (main): kill using_oaf assertion.

2000-08-11  Peter Williams  <peterw@helixcode.com>

	* Makefile.am: Make it so that test-mail links

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* folder-browser-factory.c (control_activate): Move menu items
	that affect a single message together, ditto with ones that
	affect multiple messages, put a separator in.

2000-08-11  Christopher James Lahey  <clahey@helixcode.com>

	* mail-format.c, mail-tools.h, message-list.c: Fixed a warning.

2000-08-11  Dan Winship  <danw@helixcode.com>

	* mail-display.c, mail-format.c: Redo this again. Get rid of
	struct mail_format_data and move most of that info into
	MailDisplay itself, and pass the MailDisplay around. Add a GData**
	to MailDisplay, and put the urls hash table into that. Also add
	the ability to redisplay the currently-displayed message (with the
	same GData**), and add a "show_pgp" datum to it that controls
	whether or not to decrypt PGP messages, and redo the PGP stuff
	(again) to take that into account. Now you don't get the annoying
	PGP password dialog box without any warning.

2000-08-11  Peter Williams  <peterw@helixcode.com>

	* mail-config-gui.c (service_acceptable): Make verify-service
	an asynchronous operation.

	* Makefile.am (noinst_PROGRAMS): Don't build test-thread
	while mail-threads.c is in flux.

	* mail-threads.c (mail_operation_queue): Make the error
	and query dialogs modal.
